Закончена mvp часть