@@ -1,28 +1,25 @@
 package ru.otus.prof.retail.mappers.shop;
 
-import org.hibernate.LazyInitializationException;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import ru.otus.prof.retail.STATUS;
 import ru.otus.prof.retail.dto.shop.CashDTO;
 import ru.otus.prof.retail.dto.shop.ShopBasicDTO;
 import ru.otus.prof.retail.dto.shop.ShopDTO;
 import ru.otus.prof.retail.entities.shops.Cash;
 import ru.otus.prof.retail.entities.shops.Shop;
+import ru.otus.prof.retail.STATUS;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-public class ShopMapperTest {
+class ShopMapperTest {
 
     @Mock
     private CashMapper cashMapper;
@@ -30,133 +27,112 @@ public class ShopMapperTest {
     @InjectMocks
     private ShopMapper shopMapper;
 
-    private LocalDateTime createdTime;
-    private LocalDateTime updatedTime;
-    private Cash testCash;
-    private Shop testShop;
+    private final LocalDateTime testTime = LocalDateTime.now();
 
-    @BeforeEach
-    void setup() {
-        createdTime = LocalDateTime.now();
-        updatedTime = LocalDateTime.now();
-        testCash = createTestCash();
-        testShop = createTestShop(testCash);
-    }
+    @Test
+    void toBasicDTO_ShouldConvertShopToBasicDTO() {
+        Shop shop = new Shop(1L, 101L, "Test Shop", "Address", null);
 
-    private Cash createTestCash() {
-        Cash cash = new Cash();
-        cash.setId(1L);
-        cash.setStatus(STATUS.ACTIVE);
-        cash.setNumber(2L);
-        cash.setCreateDate(createdTime);
-        cash.setUpdateDate(updatedTime);
-        return cash;
-    }
+        ShopBasicDTO dto = shopMapper.toBasicDTO(shop);
 
-    private Shop createTestShop(Cash cash) {
-        Shop shop = new Shop();
-        shop.setId(1L);
-        shop.setNumber(1L);
-        shop.setName("Test Shop");
-        shop.setAddress("Test Address");
-        shop.setCashList(cash != null ? Collections.singletonList(cash) : null);
-        return shop;
+        assertNotNull(dto);
+        assertEquals(shop.getId(), dto.id());
+        assertEquals(shop.getNumber(), dto.number());
+        assertEquals(shop.getName(), dto.name());
+        assertEquals(shop.getAddress(), dto.address());
     }
 
     @Test
-    void testToDTO() {
-        when(cashMapper.toDTO(testCash)).thenReturn(new CashDTO(1L, STATUS.ACTIVE, 2L, createdTime, updatedTime, 1L));
-
-        ShopDTO shopDTO = shopMapper.toDTO(testShop);
-
-        assertNotNull(shopDTO);
-        assertEquals(testShop.getId(), shopDTO.id());
-        assertEquals(testShop.getNumber(), shopDTO.number());
-        assertEquals(testShop.getName(), shopDTO.name());
-        assertEquals(testShop.getAddress(), shopDTO.address());
-        assertEquals(1, shopDTO.cashList().size());
-
-        verify(cashMapper, times(1)).toDTO(testCash);
+    void toBasicDTO_ShouldReturnNullWhenShopIsNull() {
+        assertNull(shopMapper.toBasicDTO(null));
     }
 
     @Test
-    void testToDTOWithNullCashList() {
-        Shop shop = createTestShop(null);
-        ShopDTO shopDTO = shopMapper.toDTO(shop);
+    void toDTO_ShouldConvertShopToDTOWithoutCashList() {
+        Shop shop = new Shop(1L, 101L, "Test Shop", "Address", null);
 
-        assertNotNull(shopDTO);
-        assertNull(shopDTO.cashList());
+        ShopDTO dto = shopMapper.toDTO(shop);
+
+        assertNotNull(dto);
+        assertEquals(shop.getId(), dto.id());
+        assertEquals(shop.getNumber(), dto.number());
+        assertEquals(shop.getName(), dto.name());
+        assertEquals(shop.getAddress(), dto.address());
+        assertTrue(dto.cashList().isEmpty());
     }
 
     @Test
-    void testToBasicDTO() {
-        ShopBasicDTO basicDTO = shopMapper.toBasicDTO(testShop);
+    void toDTO_ShouldConvertShopToDTOWithCashList() {
+        Cash cash = new Cash(1L, STATUS.ACTIVE, 1L, testTime, testTime, null);
+        Shop shop = new Shop(1L, 101L, "Test Shop", "Address", List.of(cash));
+        CashDTO cashDTO = new CashDTO(1L, STATUS.ACTIVE, 1L, testTime, testTime, 101L);
 
-        assertNotNull(basicDTO);
-        assertEquals(testShop.getId(), basicDTO.id());
-        assertEquals(testShop.getNumber(), basicDTO.number());
-        assertEquals(testShop.getName(), basicDTO.name());
-        assertEquals(testShop.getAddress(), basicDTO.address());
+        when(cashMapper.toDTO(cash)).thenReturn(cashDTO);
+
+        ShopDTO dto = shopMapper.toDTO(shop);
+
+        assertNotNull(dto);
+        assertEquals(1, dto.cashList().size());
+        assertEquals(cashDTO, dto.cashList().get(0));
     }
 
     @Test
-    void testToEntity() {
-        CashDTO cashDTO = new CashDTO(1L, STATUS.ACTIVE, 2L, createdTime, updatedTime, 1L);
-        ShopDTO shopDTO = new ShopDTO(1L, 1L, "Test Shop", "Test Address", Collections.singletonList(cashDTO));
+    void toDTO_ShouldSkipNullCashDTO() {
+        Cash cash = new Cash(1L, STATUS.ACTIVE, 1L, testTime, testTime, null);
+        Shop shop = new Shop(1L, 101L, "Test Shop", "Address", List.of(cash));
 
-        when(cashMapper.toEntity(cashDTO)).thenReturn(testCash);
+        when(cashMapper.toDTO(cash)).thenReturn(null);
 
-        Shop shop = shopMapper.toEntity(shopDTO);
+        ShopDTO dto = shopMapper.toDTO(shop);
+
+        assertNotNull(dto);
+        assertTrue(dto.cashList().isEmpty());
+    }
+
+    @Test
+    void toEntity_ShouldConvertShopDTOToEntityWithoutCashList() {
+        ShopDTO dto = new ShopDTO(1L, 101L, "Test Shop", "Address", null);
+
+        Shop shop = shopMapper.toEntity(dto);
 
         assertNotNull(shop);
-        assertEquals(shopDTO.id(), shop.getId());
-        assertEquals(shopDTO.number(), shop.getNumber());
-        assertEquals(shopDTO.name(), shop.getName());
-        assertEquals(shopDTO.address(), shop.getAddress());
-        assertEquals(1, shop.getCashList().size());
-
-        verify(cashMapper, times(1)).toEntity(cashDTO);
-    }
-
-    @Test
-    void testToEntityWithNullCashList() {
-        ShopDTO shopDTO = new ShopDTO(1L, 1L, "Test Shop", "Test Address", null);
-
-        Shop shop = shopMapper.toEntity(shopDTO);
-
-        assertNotNull(shop);
-        assertNotNull(shop.getCashList());
+        assertEquals(dto.id(), shop.getId());
+        assertEquals(dto.number(), shop.getNumber());
+        assertEquals(dto.name(), shop.getName());
+        assertEquals(dto.address(), shop.getAddress());
         assertTrue(shop.getCashList().isEmpty());
     }
 
     @Test
-    void testToBasicDTOWithNullShop() {
-        ShopBasicDTO result = shopMapper.toBasicDTO(null);
-        assertNull(result);
+    void toEntity_ShouldConvertShopDTOToEntityWithCashList() {
+        CashDTO cashDTO = new CashDTO(1L, STATUS.ACTIVE, 1L, testTime, testTime, 101L);
+        ShopDTO dto = new ShopDTO(1L, 101L, "Test Shop", "Address", List.of(cashDTO));
+        Cash cash = new Cash(1L, STATUS.ACTIVE, 1L, testTime, testTime, null);
+
+        when(cashMapper.toEntity(cashDTO)).thenReturn(cash);
+
+        Shop shop = shopMapper.toEntity(dto);
+
+        assertNotNull(shop);
+        assertEquals(1, shop.getCashList().size());
+        assertEquals(cash, shop.getCashList().get(0));
     }
 
     @Test
-    void testToDTOWithNullShop() {
-        ShopDTO result = shopMapper.toDTO(null);
-        assertNull(result);
+    void toEntity_ShouldSkipNullCash() {
+        CashDTO cashDTO = new CashDTO(1L, STATUS.ACTIVE, 1L, testTime, testTime, 101L);
+        ShopDTO dto = new ShopDTO(1L, 101L, "Test Shop", "Address", List.of(cashDTO));
+
+        when(cashMapper.toEntity(cashDTO)).thenReturn(null);
+
+        Shop shop = shopMapper.toEntity(dto);
+
+        assertNotNull(shop);
+        assertTrue(shop.getCashList().isEmpty());
     }
 
     @Test
-    void testToDTOWithLazyInitializationException() {
-        List<Cash> cashList = mock(List.class);
-        when(cashList.stream()).thenThrow(new LazyInitializationException("Lazy init error"));
-
-        Shop shop = createTestShop(null);
-        shop.setCashList(cashList);
-
-        ShopDTO shopDTO = shopMapper.toDTO(shop);
-
-        assertNotNull(shopDTO);
-        assertEquals(shop.getId(), shopDTO.id());
-        assertEquals(shop.getNumber(), shopDTO.number());
-        assertEquals(shop.getName(), shopDTO.name());
-        assertEquals(shop.getAddress(), shopDTO.address());
-        assertNotNull(shopDTO.cashList());
-        assertTrue(shopDTO.cashList().isEmpty());
+    void toEntity_ShouldReturnNullWhenDTOIsNull() {
+        assertNull(shopMapper.toEntity(null));
     }
 }
